<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2023 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            style="@style/PocketPaintToolSubtitle"
            android:text="@string/pixelate_ui_name" />

        <View style="@style/PocketPaintToolSectionDivider" />

        <LinearLayout style="@style/PocketPaintToolSection">

            <Space
                style="@style/PocketPaintToolHorizontalSpace"
                android:layout_width="21dp" />

            <TextView
                android:id="@+id/pocketpaint_pixel_width_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/pocketpaint_pixel_width_value"
                android:text="@string/transform_width_text"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pocketpaint_pixel_width_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pixel"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

            <Space
                style="@style/PocketPaintToolHorizontalSpace"
                android:layout_width="35dp" />

            <TextView
                android:id="@+id/pocketpaint_pixel_height_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/pocketpaint_pixel_height_value"
                android:text="@string/transform_height_text"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/pocketpaint_pixel_height_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="textEnd"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="100" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pixel"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp" />

            <Space
                style="@style/PocketPaintToolHorizontalSpace"
                android:layout_width="21dp" />
        </LinearLayout>

        <TextView
            style="@style/PocketPaintToolSubtitle"
            android:text="@string/pixel_ui_color" />

        <View style="@style/PocketPaintToolSectionDivider" />

        <LinearLayout style="@style/PocketPaintToolSection">

            <SeekBar
                android:id="@+id/pocketpaint_pixel_color_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="40"
                android:minHeight="30dip" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pocketpaint_transform_pixel_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:layoutDirection="ltr"
                android:saveEnabled="false"
                android:textColor="?attr/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="40" />

            <Space
                style="@style/PocketPaintToolHorizontalSpace"
                android:layout_width="16dp" />

            <Button
                android:id="@+id/pocketpaint_pixel_apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/button_apply" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
